--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -53,6 +53,21 @@
                     </div>
                 </div>
 
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img id="cover" src="./images/mern.png" alt="MERN">
+                        </div>
+                        <div class="flip-card-back">
+                            <h4 style="margin-top: 20px; color: white;">Fullstack JavaScript</h4>
+                            <p style="height: 85px; padding: 20px; vertical-align: baseline;">ReactJS, MongoDB, NodeJS, Express</p>
+                            <button id="view" type="button" class="btn btn-outline-primary btn-sm"
+                                    onclick="window.open('https://prodavalnik.herokuapp.com/')">View project
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </div>
