--- a/views/array/about/about.hbs
+++ b/views/array/about/about.hbs
@@ -30,7 +30,7 @@
 
         <div class="col-6 skills">
 
-            <span style="margin-bottom: 5px">VueJS</span>
+            <span style="margin-bottom: 5px">ReactJS/VueJS</span>
             <span style="float: right; padding-right: 2%">Beginner</span>
             <div class="progress" style="width: 98%; height: 10px">
                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
@@ -38,15 +38,15 @@
             </div>
             <br>
 
-            <span style="margin-bottom: 5px">JavaScript ES6</span>
-            <span style="float: right; padding-right: 2%">Advanced</span>
+            <span style="margin-bottom: 5px">MongoDB/Express</span>
+            <span style="float: right; padding-right: 2%">Intermediate</span>
             <div class="progress" style="width: 98%; height: 10px">
-                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 50%" aria-valuenow="10"
                      aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <br>
 
-            <span style="margin-bottom: 5px">SASS</span>
+            <span style="margin-bottom: 5px">TypeScript/SASS</span>
             <span style="float: right; padding-right: 2%">Beginner</span>
             <div class="progress" style="width: 98%; height: 10px">
                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 25%" aria-valuenow="10"
@@ -54,7 +54,7 @@
             </div>
             <br>
 
-            <span style="margin-bottom: 5px">CSS3 / HTML5</span>
+            <span style="margin-bottom: 5px">JavaScript ES6 / CSS3 / HTML5 </span>
             <span style="float: right; padding-right: 2%">Proficiency</span>
             <div class="progress" style="width: 98%; height: 10px">
                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10"
@@ -70,7 +70,7 @@
             </div>
             <br>
 
-            <span style="margin-bottom: 5px">Bootstrap / jQuery</span>
+            <span style="margin-bottom: 5px">Bootstrap / jQuery / Material-UI</span>
             <span style="float: right; padding-right: 2%">Advanced</span>
             <div class="progress" style="width: 98%; height: 10px">
                 <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 75%" aria-valuenow="10"
@@ -85,24 +85,27 @@
     <div class="row">
         <div class="col-12 text-center tech-wrapper" style="margin-bottom: 50px">
             <h6 style="margin: 20px">Technologies that I work with:</h6>
+            <img src="./images/react-js.png" class="tech">
             <img src="./images/vue-js.png" class="tech">
             <img src="./images/sass.png" class="tech">
+            <img src="./images/TS.png" class="tech">
             <img src="./images/HTML.png" class="tech">
             <img src="./images/JS.png" class="tech">
             <img src="./images/CSS.png" class="tech">
+            <img src="./images/node.png" class="tech">
+            <img src="./images/express.png" class="tech">
+            <img src="./images/mongo.png" class="tech">
             <img src="./images/git.png" class="tech">
             <img src="./images/ajax.png" class="tech">
             <img src="./images/jQuery.png" class="tech">
             <img src="./images/BS.png" class="tech">
-            <img src="./images/HB.png" class="tech">
             <img src="./images/word-press.png" class="tech">
+            <img src="./images/mui.png" class="tech">
             <img src="./images/mocha.png" class="tech">
             <img src="./images/chai.png" class="tech">
             <img src="./images/npm.png" class="tech">
             <img src="./images/api.png" class="tech">
             <img src="./images/regEx.png" class="tech">
-            <img src="./images/node.png" class="tech">
-            <img src="./images/express.png" class="tech">
             <img src="./images/webpack.png" class="tech">
             <img src="./images/gulp.png" class="tech">
             <img src="./images/PS.png" class="tech">
