--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -53,7 +53,7 @@
                     </div>
                 </div>
 
-                {{!-- <div class="flip-card">
+                <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <img id="cover" src="./images/mern.png" alt="MERN">
@@ -66,7 +66,7 @@
                             </button>
                         </div>
                     </div>
-                </div> --}}
+                </div>
 
             </div>
 
