--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -64,6 +64,9 @@
                             <button id="view" type="button" class="btn btn-outline-primary btn-sm"
                                     onclick="window.open('https://prodavalnik.herokuapp.com/')">View project
                             </button>
+                            <button id="view" type="button" class="btn btn-outline-primary btn-sm"
+                                    onclick="window.open('https://github.com/AChristoff/prodavalnik/')">Repo
+                            </button>
                         </div>
                     </div>
                 </div>
