--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -11,43 +11,13 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img id="cover" src="./images/vue-sass.png" alt="casita">
+                            <img id="cover" src="./images/casita-logo.png" alt="casita">
                         </div>
                         <div class="flip-card-back">
                             <h4 style="margin-top: 20px; color: white;">Business Website</h4>
                             <p style="height: 85px; padding: 20px; vertical-align: baseline;">Vue.js & Sass</p>
                             <button id="view" type="button" class="btn btn-outline-primary btn-sm"
                                     onclick="window.open('https://casita-bg.com/')">View project
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img id="cover" src="./images/front-end.png" alt="landing-page">
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 style="margin-top: 20px; color: white;">Landing page</h4>
-                            <p style="height: 85px; padding: 20px; vertical-align: baseline;">JavaScript, HTML, CSS</p>
-                            <button id="view" type="button" class="btn btn-outline-primary btn-sm"
-                                    onclick="window.open('https://neterra.net/business-services/')">View project
-                            </button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="flip-card">
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img id="cover" src="./images/wordpress.png" alt="wordpress">
-                        </div>
-                        <div class="flip-card-back">
-                            <h4 style="margin-top: 20px; color: white;">Custom theme</h4>
-                            <p style="height: 85px; padding: 20px; vertical-align: baseline;">Wordpress, PHP, Sass</p>
-                            <button id="view" type="button" class="btn btn-outline-primary btn-sm"
-                                    onclick="window.open('http://custom-wp-theme.fast-page.org/')">View project
                             </button>
                         </div>
                     </div>
@@ -66,6 +36,51 @@
                             </button>
                             <button id="view" type="button" class="btn btn-outline-primary btn-sm"
                                     onclick="window.open('https://github.com/AChristoff/prodavalnik/')">Repo
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img id="cover" src="./images/net-logo.png" alt="landing-page">
+                        </div>
+                        <div class="flip-card-back">
+                            <h4 style="margin-top: 20px; color: white;">NETERRA Landing page</h4>
+                            <p style="height: 85px; padding: 20px; vertical-align: baseline;">JavaScript, HTML, CSS</p>
+                            <button id="view" type="button" class="btn btn-outline-primary btn-sm"
+                                    onclick="window.open('https://neterra.net/business-services/')">View project
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img id="cover" src="./images/wordpress.png" alt="wordpress">
+                        </div>
+                        <div class="flip-card-back">
+                            <h4 style="margin-top: 20px; color: white;">WP Custom theme</h4>
+                            <p style="height: 85px; padding: 20px; vertical-align: baseline;">Wordpress, PHP, Sass</p>
+                            <button id="view" type="button" class="btn btn-outline-primary btn-sm"
+                                    onclick="window.open('http://custom-wp-theme.fast-page.org/')">View project
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img id="cover" src="./images/ecta-logo.png" alt="landing-page-ecta">
+                        </div>
+                        <div class="flip-card-back">
+                            <h4 style="margin-top: 20px; color: white;">ECTA 2020 landing page</h4>
+                            <p style="height: 85px; padding: 20px; vertical-align: baseline;">JavaScript, HTML, CSS</p>
+                            <button id="view" type="button" class="btn btn-outline-primary btn-sm"
+                                    onclick="window.open('https://www.ectacountryfocus.eu/')">View project
                             </button>
                         </div>
                     </div>
