--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -44,7 +44,7 @@
                 <div class="flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img id="cover" src="./images/net-logo.png" alt="landing-page">
+                            <img id="cover" src="./images/nete-logo.png" alt="landing-page">
                         </div>
                         <div class="flip-card-back">
                             <h4 style="margin-top: 20px; color: white;">NETERRA Landing page</h4>
