--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -37,6 +37,9 @@
                             <button id="view" type="button" class="btn btn-outline-primary btn-sm"
                                     onclick="window.open('https://github.com/AChristoff/prodavalnik/')">Repo
                             </button>
+                            <button id="view" type="button" class="btn btn-outline-primary btn-sm"
+                                    onclick="window.open('https://aleksov.herokuapp.com/api-docs/')">API
+                            </button>
                         </div>
                     </div>
                 </div>
