--- a/views/array/experience/experience.hbs
+++ b/views/array/experience/experience.hbs
@@ -12,7 +12,7 @@
                     <a href="https://neterra.net" target="_blank">
                         <img class="enlarge-B" src="./images/Neterra-log.png" data-alt-src="./images/color-Neterra-log.png">
                     </a>
-                    <p class="job-title">Junior Front-End Developer</p>
+                    <p class="job-title">Front-End Developer</p>
                     <p class="years">2019 - Present</p>
                 </div>
                 <div class="col-2"></div>
@@ -30,7 +30,7 @@
                 <div class="col-2"></div>
             </div>
 
-            <div class="row">
+            {{!-- <div class="row">
                 <div class="col-2"></div>
                 <div class="col-8 xp-info" style="margin-bottom: 10px">
                     <a href="https://parcel.dhl.co.uk" target="_blank">
@@ -62,7 +62,7 @@
                     <p class="years">2009 - 2012</p>
                 </div>
                 <div class="col-2"></div>
-            </div>
+            </div> --}}
 
         </div>
     </div>
