update personal data

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -6,7 +6,7 @@
             <h1>ALEKSANDAR HRISTOV</h1>
             <div style="text-align: center">
                 <hr>
-                <p>Front-End Web Developer</p>
+                <p>Fullstack JavaScript Developer / MERN stack</p>
                 <hr>
             </div>
         </div>
