update project links

--- a/views/array/portfolio/portfolio.hbs
+++ b/views/array/portfolio/portfolio.hbs
@@ -32,13 +32,13 @@
                             <h4 style="margin-top: 20px; color: white;">Fullstack JavaScript</h4>
                             <p style="height: 85px; padding: 20px; vertical-align: baseline;">ReactJS, MongoDB, NodeJS, Express</p>
                             <button id="view" type="button" class="btn btn-outline-primary btn-sm"
-                                    onclick="window.open('https://prodavalnik.herokuapp.com/')">View project
+                                    onclick="window.open('https://prodavalnik.aleksov.work/')">View project
                             </button>
                             <button id="view" type="button" class="btn btn-outline-primary btn-sm"
                                     onclick="window.open('https://github.com/AChristoff/prodavalnik/')">Repo
                             </button>
                             <button id="view" type="button" class="btn btn-outline-primary btn-sm"
-                                    onclick="window.open('https://aleksov.herokuapp.com/api-docs/')">API
+                                    onclick="window.open('https://prodavalnik-api.aleksov.work/api/docs/')">API
                             </button>
                         </div>
                     </div>
