--- a/src/App.scss
+++ b/src/App.scss
@@ -3,14 +3,34 @@
 @import './sass/_typography.scss';
 
 .App {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   min-height: 100%;
 
-  .app-header, .app-main {
-      width: 100%;
-      max-width: 60em;
-      margin: 0 auto; 
+  #tsparticles {
+    position: absolute;
+    width: 100%;
+    height: 97%;
+    margin: 1% 0;
+    z-index: -1;
   }
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+    max-width: 70em;
+    margin: 0 auto;
+    background: rgba(255,255,255,0.9);
+  }
+
+  .app-header,
+  .app-main {
+    width: 100%;
+
+  }
+
+  .app-main {
+    margin-top: 4em;
+  }
+
 }
