--- a/src/components/shared/main/header/Header.scss
+++ b/src/components/shared/main/header/Header.scss
@@ -10,10 +10,10 @@
     display: flex;
     align-items: center;
     height: 100%;
-    margin-right: auto;
+    margin: 0 auto 0 0.5em;
 
     img {
-      height: 80%;
+      height: 69%;
     }
   }
 }
