--- a/src/App.scss
+++ b/src/App.scss
@@ -6,10 +6,9 @@
   min-height: 100%;
 
   #tsparticles {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 97%;
-    margin: 1% 0;
+    max-height: 97%;
     z-index: -1;
   }
 
