--- a/src/components/pages/portfolio/Portfolio.scss
+++ b/src/components/pages/portfolio/Portfolio.scss
@@ -2,6 +2,10 @@
 
   .portfolio {
     text-align: center;
+
+    .page-title {
+      margin-bottom: 2em;
+    }
   }
 
   .card-list {
@@ -11,74 +15,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-
-    .site-card {
-
-      flex: 0 1 70%;
-      margin-bottom: 4em;
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      border-radius: 0.4em;
-      background: rgba(255, 255, 255, 0.5);
-      box-shadow: 0 0 1px 0 white inset, 0.1em 0.2em 0.5em 0 rgba(0, 0, 0, 0.2);
-
-      .card-head {
-        position: relative;
-        overflow: hidden;
-        flex: 0 0 auto;
-        transition: all 0.3s ease-in;
-
-        &:before {
-          display: block;
-          content: '';
-          padding-top: 65%;
-        }
-
-        img {
-          display: block;
-          position: absolute;
-          width: 100%;
-          height: auto;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          transition: all 0.25s ease-in;
-        }
-
-        &:hover img {
-          display: block;
-          width: 120%;
-          cursor: pointer;
-        }
-      }
-
-      .card-body {
-        display: flex;
-        flex-direction: column;
-        flex: 1 1 auto;
-        justify-content: flex-start;
-        ;
-        padding: 0 1em 1em;
-        height: 100%;
-      }
-
-      .card-heading {
-        margin: 0.75em 0 0.25em;
-      }
-
-      .view-btn {
-        margin-top: auto;
-      }
-
-      .edit-card {
-        padding: 1em 0 0;
-        display: flex;
-        justify-content: space-between;
-      }
-    }
   }
-
 }
 
 @media (min-width: 768px) {
@@ -90,12 +27,8 @@
     &:after {
       display: block;
       content: '';
-      flex: 0 1 41%;
+      flex: 0 1 45%;
       order: 1000;
-    }
-
-    .site-card {
-      flex: 0 1 41%;
     }
   }
 }
