--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -1,7 +1,9 @@
 @include add-font('NunitoSans', normal, normal, '../assets/fonts/NunitoSans/NunitoSans-Regular.ttf');
 @include add-font('NunitoSans', normal, italic, '../assets/fonts/NunitoSans/NunitoSans-Italic.ttf');
-@include add-font('NunitoSans', bold, normal, '../assets/fonts/NunitoSans/NunitoSans-SemiBold.ttf');
-@include add-font('NunitoSans', bold, italic, '../assets/fonts/NunitoSans/NunitoSans-SemiBoldItalic.ttf');
+@include add-font('NunitoSans', 600, normal, '../assets/fonts/NunitoSans/NunitoSans-SemiBold.ttf');
+@include add-font('NunitoSans', 600, italic, '../assets/fonts/NunitoSans/NunitoSans-SemiBoldItalic.ttf');
+@include add-font('NunitoSans', 700, normal, '../assets/fonts/NunitoSans/NunitoSans-Bold.ttf');
+@include add-font('NunitoSans', 700, italic, '../assets/fonts/NunitoSans/NunitoSans-BoldItalic.ttf');
 
 
 *, *:before, *:after {
@@ -40,7 +42,7 @@ $step: 0.32;
 	font-family: 'NunitoSans';
 	line-height: 1.1em;
 	margin: 0.3em 0 0.5em 0;
-  font-weight: bold;
+  font-weight: 600;
 	color: $color-base-font-black;
 	text-transform: uppercase;
   letter-spacing: 3px;
