--- a/src/components/pages/about/About.scss
+++ b/src/components/pages/about/About.scss
@@ -4,6 +4,25 @@
   text-align: center;
   color: $color-base-font-black;
 
+  .about-cover {
+    display: block;
+    border-radius: 0.3em;
+    overflow: hidden;
+    position: relative;
+    width: 89%;
+    height: 25em;
+    margin: 0 auto;
+
+    img {
+      position: absolute;
+      width: 100%;
+      height: auto;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
   .general-info {
     text-align: justify;
     margin: 2em 4em;
@@ -84,7 +103,7 @@
         li:last-child {
           img {
             width: 11em;
-            margin: 0 0 0 -0.1em;
+            margin: 0 0 0 -5px;
           }
         }
       }
