--- a/src/components/shared/main/nav/Nav.scss
+++ b/src/components/shared/main/nav/Nav.scss
@@ -1,30 +1,78 @@
 @import '../../../../sass/variables';
 
-.site-nav {
-  
-  ul {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    height: 100%;
 
-    li {
-      text-transform: uppercase;
-      display: flex;
-      align-items: center;
-      font-size: 1em;
-      padding: 0;
+@media (min-width: 1px) {
+  .site-nav {
+
+    ul {
+      display: none;
+      height: 0;
+      flex-direction: column;
+      list-style: none;
       margin: 0;
+      padding: 0;
+      
 
-      a {
-        color: $color-base-font-grey;
-        padding: 0.75em;
+      transition: all 0.6s ease-in-out;
+      border-radius: 0.5em;
 
-        &:hover {
-          color: $color-base-font-black;
+      &.active {
+        display: flex;
+        position: absolute;
+        top: 4em;
+        left: 50%;
+        transform: translateX(-50%);
+        background: $pure-white;
+        height: 10em;
+      }
+
+      li {
+        text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        font-size: 1em;
+        padding: 0;
+        margin: 0;
+
+        a {
+          color: $color-base-font-grey;
+          padding: 0.75em;
+
+          &:hover {
+            color: $color-base-font-black;
+          }
         }
       }
     }
   }
 }
+
+@media (min-width: 769px) {
+  .site-nav {
+
+    ul {
+      display: flex;
+      flex-direction: row;
+
+      li {
+        text-transform: uppercase;
+        display: flex;
+        align-items: center;
+        font-size: 1em;
+        padding: 0;
+        margin: 0;
+
+        a {
+          color: $color-base-font-grey;
+          padding: 0.75em;
+
+          &:hover {
+            color: $color-base-font-black;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1281px) {}
