--- a/src/components/shared/main/nav/Nav.scss
+++ b/src/components/shared/main/nav/Nav.scss
@@ -5,32 +5,38 @@
   .site-nav {
 
     ul {
-      display: none;
+      display: flex;
       height: 0;
       flex-direction: column;
       list-style: none;
       margin: 0;
       padding: 0;
-      
-
       transition: all 0.6s ease-in-out;
-      border-radius: 0.5em;
+      overflow: hidden;
+      top: 4em;
+      left: 0;
+      right: 0;
+      position: absolute;
+      background: $pure-white;
+      border-bottom: 0 solid rgba(0, 0, 0, 0);
+      z-index: 5;
 
       &.active {
-        display: flex;
-        position: absolute;
-        top: 4em;
-        left: 50%;
-        transform: translateX(-50%);
-        background: $pure-white;
-        height: 10em;
+        height: 10.5em;
+        border-bottom: 1px solid $color-base-font-black;
+
+        li {
+          justify-content: center;
+          font-size: 1.25em;
+        }
       }
 
       li {
         text-transform: uppercase;
         display: flex;
         align-items: center;
-        font-size: 1em;
+        justify-content: center;
+        font-size: 1.25em;
         padding: 0;
         margin: 0;
 
@@ -57,7 +63,6 @@
       li {
         text-transform: uppercase;
         display: flex;
-        align-items: center;
         font-size: 1em;
         padding: 0;
         margin: 0;
