--- a/src/components/pages/portfolio/partials/FlipCard.scss
+++ b/src/components/pages/portfolio/partials/FlipCard.scss
@@ -1,12 +1,12 @@
 @media (min-width: 1px) {
 
   .flip-card {
-    flex: 0 1 70%;
+    flex: 0 1 80%;
     display: flex;
     flex-direction: column;
     background-color: transparent;
-    width: 288px;
-    height: 208px;
+    width: 24em;
+    height: 12em;
     perspective: 1000px;
     margin-bottom: 2em;
   }
@@ -41,6 +41,8 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      width: auto;
+      height: 90%;
     }
   }
 
@@ -52,7 +54,7 @@
 
   .flip-card-back {
     z-index: 10;
-    padding: 1em;
+    padding: 3px;
     background-color: #1A1A1A;
     color: white;
     transform: rotateY(180deg);
@@ -71,6 +73,13 @@
 
     .description {
       width: 100%;
+    }
+
+    .buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
     }
   }
 
@@ -97,5 +106,18 @@
 
   .flip-card {
     flex: 0 1 45%;
+    height: 14em
+  }
+
+  .flip-card-front,
+  .flip-card-back {
+
+    img {
+      width: auto;
+    }
+  }
+
+  .flip-card-back {
+    padding: 1em;
   }
 }
