--- a/src/components/shared/main/header/Header.scss
+++ b/src/components/shared/main/header/Header.scss
@@ -3,8 +3,6 @@
 @media (min-width: 1px) {
   .app-header {
     height: 4em;
-    display: flex;
-    flex-wrap: wrap;
     border-bottom: 1px solid $color-border-grey;
     background: $pure-white;
     position: fixed;
@@ -12,16 +10,24 @@
     left: 0;
     right: 0;
     z-index: 10;
-  
 
-    .logo {
+    .some-test {
       display: flex;
-      align-items: center;
+      flex-wrap: wrap;
+      max-width: 70em;
+      margin: 0 auto;
       height: 100%;
-      margin: 0 auto 0 0.5em;
 
-      img {
-        height: 69%;
+      .logo {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        margin: 0 auto 0 0.5em;
+
+        img {
+          height: 2.8em;
+          margin-top: -1px;
+        }
       }
     }
   }
