--- a/src/components/shared/main/nav/Nav.scss
+++ b/src/components/shared/main/nav/Nav.scss
@@ -21,16 +21,6 @@
       border-bottom: 0 solid rgba(0, 0, 0, 0);
       z-index: 5;
 
-      &.active {
-        height: 10.5em;
-        border-bottom: 1px solid $color-base-font-black;
-
-        li {
-          justify-content: center;
-          font-size: 1.25em;
-        }
-      }
-
       li {
         text-transform: uppercase;
         display: flex;
@@ -51,6 +41,17 @@
       }
     }
   }
+
+  .icon-wrapper.active ~ ul {
+
+    height: 10.5em;
+    border-bottom: 1px solid $color-base-font-black;
+
+    li {
+      justify-content: center;
+      font-size: 1.25em;
+    }
+  }
 }
 
 @media (min-width: 769px) {
@@ -59,6 +60,8 @@
     ul {
       display: flex;
       flex-direction: row;
+      height: 100%;
+      position: static;
 
       li {
         text-transform: uppercase;
