add more mobile styles

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,7 @@
 
+//page-width
+$page-width: 70em;
+
 //font size
 $font-size-desktop: 14px;
 $font-size-tablet: 13px;
@@ -10,4 +13,5 @@ $color-site-bgrd: #DFE0E4;
 $color-base-font-black: #333333;
 $color-base-font-grey: #919AA1;
 $color-border-grey: #e5e5e5;
+
 
