--- a/src/App.scss
+++ b/src/App.scss
@@ -2,34 +2,45 @@
 @import './sass/_mixins.scss';
 @import './sass/_typography.scss';
 
-.App {
-  min-height: 100%;
+@media (min-width: 1px) {
+  .App {
+    min-height: 100%;
 
-  #tsparticles {
-    position: fixed;
-    width: 100%;
-    max-height: 97%;
-    z-index: -1;
+    #tsparticles {
+      position: fixed;
+      width: 100%;
+      max-height: 97%;
+      z-index: -1;
+    }
+
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      max-width: $page-width;
+      margin: 0 auto;
+      background: rgba(255, 255, 255, 0.85);
+    }
+
+    .app-header,
+    .app-main {
+      width: 100%;
+
+    }
+
+    .app-main {
+      margin: 7em 0 3em;
+    }
   }
+}
 
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    max-width: 70em;
-    margin: 0 auto;
-    background: rgba(255,255,255,0.9);
+@media (min-width: 768px) {
+  .App {
+
+    .app-header {
+      max-width: $page-width;
+      margin: 0 auto;
+    }
   }
-
-  .app-header,
-  .app-main {
-    width: 100%;
-
-  }
-
-  .app-main {
-    margin: 7em 0 3em;
-  }
-
 }
