--- a/src/components/shared/main/header/Header.scss
+++ b/src/components/shared/main/header/Header.scss
@@ -10,11 +10,17 @@
     left: 0;
     right: 0;
     z-index: 10;
+    box-shadow: none;
+    transition: all 0.3s ease-in-out;
 
-    .some-test {
+    &.active {
+      box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.2);
+    }
+
+    .header-wrapper {
       display: flex;
       flex-wrap: wrap;
-      max-width: 70em;
+      max-width: $page-width;
       margin: 0 auto;
       height: 100%;
 
@@ -25,7 +31,7 @@
         margin: 0 auto 0 0.5em;
 
         img {
-          height: 2.8em;
+          height: 75%;
           margin-top: -1px;
         }
       }
@@ -33,6 +39,13 @@
   }
 }
 
-@media (min-width: 769px) {}
+@media (min-width: 769px) {
+  .app-header {
+
+    &.active {
+      height: 3em;
+    }
+  }
+}
 
 @media (min-width: 1281px) {}
