--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -54,7 +54,7 @@ $step: 0.32;
 }
 
 #{$headings} {
-	font-family: 'NunitoSans';
+	font-family: 'NunitoSans', 'Arial', sans-serif;
 	line-height: 1.1em;
 	margin: 0.3em 0 0.5em 0;
   font-weight: 600;
