--- a/src/components/shared/main/nav/Nav.scss
+++ b/src/components/shared/main/nav/Nav.scss
@@ -30,19 +30,37 @@
         padding: 0;
         margin: 0;
 
-        a {
+        a,
+        .lang {
           color: $color-base-font-grey;
           padding: 0.75em;
 
           &:hover {
             color: $color-base-font-black;
+            cursor: pointer;
+          }
+        }
+
+        &.lang-tab {
+          position: relative;
+          margin-left: 1em;
+          width: 4em;
+
+          &:before {
+            content: "|";
+            color: $color-base-font-grey;
+            position: absolute;
+            left: -0.6em;
+            top: 50%;
+            transform: translateY(-55%);
+            line-height: 1;
           }
         }
       }
     }
   }
 
-  .icon-wrapper.active ~ ul {
+  .icon-wrapper.active~ul {
 
     height: 10.5em;
     border-bottom: 1px solid $color-base-font-black;
