--- a/src/components/shared/main/nav/Nav.scss
+++ b/src/components/shared/main/nav/Nav.scss
@@ -32,7 +32,7 @@
 
         a,
         .lang {
-          color: $color-base-font-grey;
+          color: #000000;
           padding: 0.75em;
 
           &:hover {
@@ -42,18 +42,24 @@
         }
 
         &.lang-tab {
-          position: relative;
-          margin-left: 1em;
+          position: absolute;
+          margin-left: 0;
           width: 4em;
+          top: 5.5em;
+          right: 1em;
 
           &:before {
-            content: "|";
-            color: $color-base-font-grey;
+            content: "";
+            color: $color-site-bgrd;
             position: absolute;
-            left: -0.6em;
+            left: -0.5em;
             top: 50%;
             transform: translateY(-55%);
             line-height: 1;
+          }
+
+          span {
+            color: rgba(0, 0, 0, 0.3);
           }
         }
       }
@@ -94,6 +100,23 @@
 
           &:hover {
             color: $color-base-font-black;
+          }
+        }
+
+        &.lang-tab {
+          position: relative;
+          margin-left: 1em;
+          width: 4em;
+          top: unset;
+          right: unset;
+
+          &:before {
+            content: "|";
+            color: $color-base-font-grey;
+          }
+
+          span {
+            color: $color-base-font-grey;
           }
         }
       }
