--- a/src/components/pages/home/Home.scss
+++ b/src/components/pages/home/Home.scss
@@ -10,6 +10,8 @@
     border-color: $color-border-grey;
     border-style: solid;
     border-width: 1px 0 1px;
+    max-width: 85%;
+    margin: 0 auto;
   }
 
   .home-cover {
