--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,16 @@
     .app-main {
       margin: 7em 0 3em;
     }
+
+    .left {
+      justify-content: flex-start;
+      text-align: left;
+    }
+
+    .right {
+      justify-content: flex-end;
+      text-align: right;
+    }
   }
 }
 
