--- a/src/components/pages/about/About.scss
+++ b/src/components/pages/about/About.scss
@@ -54,11 +54,6 @@
             justify-content: space-between;
             margin-bottom: 0.2em;
 
-            &.left {
-              justify-content: flex-start;
-              text-align: left;
-            }
-
             &.position {
               font-weight: 600;
               margin: 1em 0 0.5em 0;
@@ -77,6 +72,12 @@
         .education {
           ul:first-of-type {
             margin-bottom: 3em;
+          }
+
+          li {
+            .period {
+              width: 35%;
+            }
           }
 
           li:first-child {
