update cv and portfolio

--- a/src/components/pages/about/About.scss
+++ b/src/components/pages/about/About.scss
@@ -98,7 +98,7 @@
 
         .work-history,
         .education {
-          ul:first-of-type {
+          ul {
             margin-bottom: 3em;
           }
 
